# FEM3D_CXX

./: CMakeLists.txt  FEM3D.cpp  FEM3D.hpp  main.cpp
include/: Algoritm.hpp  AlternantKozlov.hpp  EigenLogger.hpp  FEM3D.hpp  FEM3Dvector.hpp  LinearElasticity3D.hpp  Mesh.hpp  MeshInfo.hpp  eigen_common.hpp  params.hpp  utils.hpp
outputs/: out.txt
src/: Algoritm.cpp  AlternantKozlov.cpp  CMakeLists.txt  FEM3D.cpp  FEM3Dvector.cpp  LinearElasticity3D.cpp  Mesh.cpp  main.cpp  utils.cpp
tests/: CMakeLists.txt  learn_derivedStructMemberinDerivedClass.cpp  learn_isNodalBasisAutomaticallyGenerated.cpp  learn_jabobians.cpp  randomCXXTests.cpp  randomEigenTests.cpp  testAlternant.cpp  testExampleSolutions.cpp  testNonlinearSolution.cpp  test_checkNodeSatisfiesBoundaryCondition.cpp  test_checkParamsInitialization.cpp  test_setBoundaryConditions.cpp  test_stiffnessAndLoad.cpp  test_utils.cpp
